# QUARK-plugin-template

./: NOTICE  README.md  pyproject.toml
.github/workflows/: replace_names.yml
src/PLUGIN_NAME_FORMATTED/: __init__.py  example_module.py
