[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project.urls]
Homepage = "PLUGIN_HOMEPAGE"

[project]
name = "PLUGIN_NAME"
version = "0.1"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = { text = "Apache-2.0" }
dependencies = ["quark-framework>=0.1.9"]
